--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <form class="form" id="form">
             <div class="form-control">
                 <label for="name">Nome</label>
-                <input type="text" id="name" autocomplete="off" pattern="[a-z]*">
+                <input type="text" id="name" autocomplete="off">
                 <i class="fa -solid fa-circle-exclamation icon-error" style="color: #b00c0c;"></i>
                 <i class="fa-solid fa-circle-check icon-success" style="color: #328146;"></i>
                 <small>Mensagem de Erro</small>
