--- a/Contato/index.html
+++ b/Contato/index.html
@@ -7,27 +7,32 @@
     <title>Contato</title>
 </head>
 <body>
+    <!---->
     <h1>Fale Conosco</h1>
-    <form action="https://api.staticforms.xyz/submit" method="POST" class="form">
-        <input type="hidden" name="accessKey" value="13665a1e-6fff-4aae-a795-2299b228bbf3">
-        <input type="hidden" name="redirectTo" value="http://127.0.0.1:5500/formularios-js/Contato/thanks.html">
+    <form 
+    action="https://formsubmit.co/ajax/avelinogabrieldossantos@gmail.com"  
+    method="POST" 
+    class="form" 
+    data-form
+    >
         <div class="form-control">
             <label for="nome">Nome</label>
-            <input type="text" name="name" id="nome" required>
+            <input type="text" name="nome" id="nome" required>
         </div>
         <div class="form-control">
             <label for="email">E-mail</label>
-            <input type="email" name="email" id="email" required>
+            <input type="email" name="e-mail" id="email" required>
         </div>
         <div class="form-control">
             <label for="subject">Assunto</label>
-            <input type="text" name="subject" id="subject" required>
+            <input type="text" name="assunto" id="subject" required>
         </div>
         <div class="form-control">
             <label for="message">Mensagem</label>
-            <textarea name="message" id="message" cols="30" rows="10" required>Digite sua mensagem</textarea>
+            <textarea name="mensagem" id="message" cols="30" rows="10">Digite sua mensagem</textarea>
         </div>
-        <input type="submit" value="Enviar">
+        <button type="submit" data-button >Enviar</button>
     </form>
+    <script src="./src/main.js"></script>
 </body>
 </html>
